--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,5 +5,6 @@
       "System": "Information",
       "Microsoft": "Information"
     }
-  }
+  },
+  "connectingString": "Data Source=rdsdev.cyizhh2mbeac.us-east-1.rds.amazonaws.com,1433;Initial Catalog=rdsCommon;User ID=israelcanul;Password=12345678;Connection Timeout=6000;Max Pool Size=5000;Min Pool Size=20;Application Name=Narilearsi;"
 }
