--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -6,5 +6,5 @@
       "Microsoft": "Information"
     }
   },
-  "connectingString": "Data Source=rdsdev.cyizhh2mbeac.us-east-1.rds.amazonaws.com,1433;Initial Catalog=rdsCommon;User ID=israelcanul;Password=12345678;Connection Timeout=6000;Max Pool Size=5000;Min Pool Size=20;Application Name=Narilearsi;"
+  "ConnectingString": "Data Source=rdsdev.cyizhh2mbeac.us-east-1.rds.amazonaws.com,4389;Initial Catalog=rdsCommon;User ID=israelcanul;Password=12345678;Connection Timeout=6000;Max Pool Size=5000;Min Pool Size=20;Application Name=Narilearsi;"
 }
