se configura program.cs y se modifico el stored procedure para que se ejecute correctemnte en endpoint

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -6,7 +6,7 @@
       "Microsoft": "Information"
     }
   },
-  "ConnectionStrings": {
-    "rdsDataBase": "Data Source=rdsdev.cyizhh2mbeac.us-east-1.rds.amazonaws.com,1433;Initial Catalog=rdsCommon;User ID=israelcanul;Password=12345678;Connection Timeout=6000;Max Pool Size=5000;Min Pool Size=20;Application Name=Narilearsi;"
+  "connectingString": {
+    "rdsDataBase": "Data Source=rdsdev.cyizhh2mbeac.us-east-1.rds.amazonaws.com,4389;Initial Catalog=rdsCommon;User ID=israelcanul;Password=12345678;Connection Timeout=6000;Max Pool Size=5000;Min Pool Size=20;Application Name=Narilearsi;"
   }
 }
